Fix Error message visibility

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -2883,4 +2883,13 @@
 			}
 		}
 	}
+// Error Message
+	.dark-mode {
+		#ErrorBoundary {
+			color: var(--darkmode-contrast);
+			a {
+				color: var(--link-node-color-dark);
+			}
+		}
+	}
 
